# mpv_qt

./: .clang-format  .tasks  CMakeLists.txt
src/: CMakeLists.txt  main.cpp  player.cpp  player.hpp  qmpv.cpp  qmpv.hpp
